Fixing the image editor styles on mobile

--- a/app/assets/stylesheets/temporary.css.sass
+++ b/app/assets/stylesheets/temporary.css.sass
@@ -980,6 +980,7 @@ form
   background-color: transparent !important
   margin: 0 0 0 0 !important
   padding: 1em
+  position: relative
 
   label
     text-align: left !important
@@ -993,9 +994,9 @@ form
   &.minimal
     padding: 0
 
-  &#add-memory img, &#edit-memory img
-    max-width: 720px
-    margin-bottom: 1em
+  // &#add-memory img, &#edit-memory img
+  //   max-width: 720px
+  //   margin-bottom: 1em
 
   .form-group
     &[aria-required="true"]
@@ -1040,20 +1041,24 @@ form
     margin-left: -15px
     color: $error
 
-  #image-editor-wrapper
+  #image-editor
     display: none
     background: lightgrey
+    margin-left: -15px
+    margin-right: -15px
+    margin-bottom: 0.6em
 
-    #image-editor
+    #image-area
       text-align: center
-      padding: 10px
-      margin-bottom: 0.6em
+      padding: 50px 10px
+      overflow: hidden
 
-      #image-wrapper
+      #image-rotation-box
         width: 350px
         height: 350px
         line-height: 350px
         margin: 0 auto
+        position: relative
         @include transform(rotate(0deg))
         @include transition(all 0.5s)
 
@@ -1075,10 +1080,11 @@ form
         &.rotate-270
           @include transform(rotate(-270deg))
 
-        img.upload
+        img.image
           max-width: 100%
           max-height: 100%
           vertical-align: middle
+
 
     .controls
       padding: 0.4em
@@ -1443,9 +1449,12 @@ body.styleguide
   form
     background-color: #ccc
 
-    #image-editor-wrapper
-      width: 300px
-      margin-left: -30px
+    #image-editor
+      #image-area
+        #image-rotation-box
+          width: 230px
+          height: 230px
+          line-height: 230px
 
     &.minimal
       background-color: #fff
